푸시하기위해 커밋합니다.

--- a/WebContent/H08Table.html
+++ b/WebContent/H08Table.html
@@ -228,7 +228,7 @@
 		<table summary = "회사 임직원들의 연봉표입니다."
 			style="text-align:center;width:400px;background-color:red;
 				border-spacing:1px">
-			<caption>직원연봉표</caption>
+			<caption>직원연봉표입니다.</caption>
 			<colgroup>
 				<col width="10%"/>
 				<col width="*"/>
