--- a/WebContent/H09Form02.html
+++ b/WebContent/H09Form02.html
@@ -156,7 +156,7 @@
 	</fieldset>	
 	
 	<!-- 
-	-서버로 전송할 팡리선택창을 띄워준다.
+	-서버로 전송할 파일선택창을 띄워준다.
 	-전송할 파일의 포맷을 제한하고 싶을때는 accept속성을 이용한다.
 	-file속성값이 있을때는 value속성은 아무런 의미가 없다.
 	 -->
